List brands, SonarLint, Unit test